--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,7 @@ navigationCompose = "2.9.4"
 kotlinSerialization = "2.2.20"
 # kotlin serialization json
 kotlinSerializationJson = "1.7.3"
+volley = "1.2.1"
 
 
 [libraries]
@@ -61,6 +62,7 @@ hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", ve
 navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 # Kotlin serialization JSON
 kotlin-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinSerializationJson" }
+volley = { group = "com.android.volley", name = "volley", version.ref = "volley" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
