--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,7 @@ kotlin = "2.1.0"
 coreKtx = "1.10.1"
 junit = "4.13.2"
 junitVersion = "1.3.0"
-espressoCore = "3.5.1"
+espressoCore = "3.7.0"
 lifecycleRuntimeKtx = "2.6.1"
 activityCompose = "1.8.0"
 composeBom = "2025.09.00"
@@ -20,7 +20,8 @@ material3AdaptiveNavSuite = "1.3.2"
 hiltAndroid = "2.57.1"
 hiltNavigationCompose = "1.3.0"
 # Navigation composee
-navigationCompose = "2.9.4"
+navigationCompose = "2.9.6"
+navigationTesting = "2.9.6"
 # Kotlin serialization
 kotlinSerialization = "2.2.20"
 # kotlin serialization json
@@ -66,6 +67,7 @@ hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", ve
 hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 # Navigation compose
 navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
+navigation-testing = { module = "androidx.navigation:navigation-testing" , version.ref = "navigationTesting"}
 # Kotlin serialization JSON
 kotlin-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinSerializationJson" }
 volley = { group = "com.android.volley", name = "volley", version.ref = "volley" }
